@@ -2445,6 +2445,29 @@ class User {
 	function isNewbie() {
 		return !$this->isAllowed( 'autoconfirmed' );
 	}
+	
+	/**
+	 * Is the user active? We check to see if they've made at least
+	 * X number of edits in the last Y days.
+	 * 
+	 * @return bool true if the user is active, false if not
+	 */
+	public function isActiveUser() {
+		global $wgActiveUserEditcount, $wgActiveUserDays;
+		$dbr = wfGetDB( DB_SLAVE );
+		
+		// Stolen without shame from RC
+		$cutoff_unixtime = time() - ( $wgActiveUserDays * 86400 );
+		$cutoff_unixtime = $cutoff_unixtime - ( $cutoff_unixtime % 86400 );
+		$oldTime = $dbr->timestamp ( $cutoff_unixtime );
+		
+		$res = $dbr->select( 'revision', '1',
+				array( 'rev_user_text' => $this->getName(), "rev_timestamp $oldTime "),
+				__METHOD__,
+				array('LIMIT' => $wgActiveUserEditcount ) );
+				
+		return $dbr->rumRows($res) == $wgActiveUserEditcount ? true : false;
+	}
 
 	/**
 	 * Check to see if the given clear-text password is one of the accepted passwords
